# suspentionlab

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  PROJECT.md  README.md  Start-SuspensionLab.bat  TEST_INFRA.md  TEST_READY.md  alembic.ini  bundle.py  bundle_code.py  claude_audit_bundle.txt  create_admin.py  create_shortcut.ps1  create_user.py  diff_gen.py  docker-compose.yml  fix_commercial.py  fix_db.py  fix_full_car.py  fix_imports.py  fix_perf.py  fix_physics2.py  fix_re_audit.py  fix_security3.py  go_to_market_strategy.md  init_db.py  inject_collaboration.py  my_diff.diff  nginx.conf  patch.py  patch_full.py  physics_verification_report.md  print_schema.py  pyproject.toml  railway.toml  refactor_auth.py  (+27 more)
.agents/: ORIGINAL_REQUEST.md
alembic/: env.py
backend/: Dockerfile
docs/: SLA.md  VnV_Benchmark.md  api-reference.md  api.md  physics-reference.md
e2e/: tier1.spec.ts  tier2.spec.ts  tier3_4.spec.ts
frontend/: next.config.ts  package-lock.json  package.json  proxy.ts  tsc_output.txt  tsc_pretty.txt
frontend2/: Dockerfile  Dockerfile.frontend  middleware.ts  next.config.ts  package-lock.json  package.json
frontend_old/: middleware.ts  next.config.ts  package-lock.json  package.json
k8s/: cert-manager-issuer.yaml  cert-manager.yaml  certificate.yaml
physics/: quarter_car.py
playwright-report/: index.html
scratch/: drop_tier.py  load_test.py  run_load_test.ps1  test_headers.py  test_loggers.py
scripts/: fix_all.py  fix_encoding.py  test_enterprise.py  test_stripe_webhook.py  upgrade_users.py  verify_physics.py  vnv_benchmark.py
sdk/: README.md  pyproject.toml  quickstart.ipynb
sdk/suspensionlab/: __init__.py  client.py
terraform/: main.tf
test-results/: .last-run.json
tests/: conftest.py  script_idempotency.py  test_api.py  test_integration_e2e.py  test_physics.py  test_stripe_webhook.py  (+2 more)
(+359 files in other folders)
