[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suspensionlab"
version = "0.1.0"
description = "Commercial-grade vehicle dynamics simulation platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "SQLAlchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
prod = [
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "rq>=1.15.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.40b0",
    "prometheus-client>=0.17.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.0.0",
    "alembic>=1.12.0",
    "sentry-sdk>=2.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "locust>=2.15.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["suspensionlab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
